methods.returning.MethodsReturning.scala.error
Erreur de compilation :
MethodsReturning:2: error: not found: value vuBiscuit
  vuBiscuit=false
  ^MethodsReturning:5: error: not found: value vuBiscuit
      vuBiscuit=true
      ^MethodsReturning:8: error: type mismatch;
 found   : Unit
 required: Boolean
  for (i <- 1 to 6) {
         ^